--- a/WITEvents.html
+++ b/WITEvents.html
@@ -112,7 +112,7 @@
                         </h2>
 
                         <span class="d-block font-alt letter-spacing-2 mb-3 mt-4 text-large text-uppercase text-white">
-                            To celebrate an active network of women in the technology industries by facilitating career development and empowering women to be the architects of change in the STEM field
+                            Events in academic year 2024 - 2025
                         </span>
 
 
@@ -132,46 +132,20 @@
         <div class="container">
             <div class="row justify-content-center pb-5">
                 <div class="col-lg-9 pb-lg-4 text-center">
-                    <h3 class="font-alt font-w-600 letter-spacing-2 text-uppercase title-xs-small title-extra-large-2">Who We Are</h3>
-                    <p class="font-alt mb-0 mt-3 text-xs-large text-uppercase title-medium">Some things you should know about us</p>
-                    <span class="bg-base-color d-inline-block mt-4 sep-line-thick-long"></span>
+                    <h3 class="font-alt font-w-600 letter-spacing-2 text-uppercase title-xs-small title-extra-large-2">Professional meeting</h3>
+                    <ul>
+                        <li>Topic</li>
+                        <li>Date and time</li>
+                        <li>Location</li>
+                        <li>Instructions</li>
+                        <li><a href="professional_latex.md">Instructions</a></li>
+                      </ul>
                 </div>
                 <!-- //.col-lg-9 -->
             </div>
             <!-- //.row -->
 
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="carousel-custom" data-pagedots="true" data-draggable="false" data-autoplay="5000">
-                        <div class="carousel-cell w-100">
-                            <img src="assets/images/about-1.jpeg" alt="" class="img-fluid box-shadow-shallow rounded"/>
-                        </div>
-                        <!-- //.carousel-cell -->
 
-                        <div class="carousel-cell w-100">
-                            <img src="assets/images/ACMW.jpg" alt="" class="img-fluid box-shadow-shallow rounded"/>
-                        </div>
-                        <!-- //.carousel-cell -->
-
-                        <div class="carousel-cell w-100">
-                            <img src="assets/images/about-3.jpg" alt="" class="img-fluid box-shadow-shallow rounded"/>
-                        </div>
-                        <!-- //.carousel-cell -->
-                    </div>
-                    <!-- //.carousel-custom -->
-                </div>
-                <!-- //.col-lg-6 -->
-
-                <div class="col-lg-6">
-                    <div class="pl-lg-4 pt-5 pt-lg-0">
-                        <p class="font-alt text-extra-large">We are a group of individuals that are passionate about technological careers. We invite all majors and minors and both men and women to join us in networking with technological firms and creating a community of like minded individuals!</p>
-                        <p class="font-alt mt-2 text-extra-large">We hold both professional meetings and fun social events through out the year! We also run a program each year called D.I.G.I.T.A.L where we teach young girls from the Harrisonburg community about technology and encouraging them to consider a career path in technology.</p>
-						<p class="font-alt mt-2 text-extra-large">We are also JMU's new ACM-W chapter.</p>
-                    </div>
-                    <!-- //.pl-lg-4 -->
-                </div>
-                <!-- //.col-lg-6 -->
-            </div>
             <!-- //.row -->
         </div>
         <!-- //.container -->
