Added WIT events page

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                     <a class="nav-link" href="WITCalendar.html">Calendar</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="meeting_latex\professional_latex.md">Events</a>
+                                    <a class="nav-link" href="WITEvents">Events</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="WITPastEvent.html">Past Events</a>
