Added events page

--- a/WITEvents.html
+++ b/WITEvents.html
@@ -1,7 +1,7 @@
 <!DOCTYE html>
 <html lang="en">
   <head>
-    <title>JMU - Women In Technology</title>
+    <title>WIT Events</title>
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
     <meta charset="utf-8">
@@ -84,68 +84,57 @@
     </header>
     <!-- //Header End -->
 
-    <!-- Section - Home Start -->
-    <section id="home-bg-slideshow" class="bg-gray bg-overlay-black-6 h-100 overflow-hidden p-0 w-100">
-      <!-- BG Slideshow -->
-     <div class="flexslider h-100 border-0 m-0 rounded-0 w-100">
-         <div class="slides h-100 w-100">
-             <span class="bg-cover bg-overlay-black-6 d-block h-100 w-100"></span>
-             <span class="bg-cover bg-overlay-black-6 d-block h-100 w-100"></span>
-             <span class="bg-cover bg-overlay-black-6 d-block h-100 w-100"></span>
-         </div>
-         <!-- //.slides -->
-     </div>
-     <!-- //.flexslider -->
 
-        <div class="h-100 left-0 position-absolute top-0 w-100">
-            <div class="container h-100">
-                <div class="row align-items-center h-100 justify-content-center">
-                    <div class="col-lg-8 pt-3 text-center">
-                        <span class="d-block font-alt font-w-600 letter-spacing-2 text-medium text-uppercase text-white">
-                            James Madison University Chapter
-                        </span>
-
-                        <span class="bg-base-color d-inline-block mt-4 sep-line-medium-thick"></span>
-
-                        <h2 class="font-alt font-w-600 letter-spacing-2 mb-3 mt-3 text-uppercase text-white title-xs-extra-large title-extra-large-3">
-                            Women In Technology
-                        </h2>
-
-                        <span class="d-block font-alt letter-spacing-2 mb-3 mt-4 text-large text-uppercase text-white">
-                            Events in academic year 2024 - 2025
-                        </span>
-
-
-                    </div>
-                    <!-- //.col-lg-8 -->
-                </div>
-                <!-- //.row -->
-            </div>
-            <!-- //.container -->
-        </div>
-        <!-- //.h-100 -->
-    </section>
-    <!-- //Section - Home End -->
 
     <!-- Section - About Start -->
     <section id="about" class="bg-white">
         <div class="container">
             <div class="row justify-content-center pb-5">
                 <div class="col-lg-9 pb-lg-4 text-center">
-                    <h3 class="font-alt font-w-600 letter-spacing-2 text-uppercase title-xs-small title-extra-large-2">Professional meeting</h3>
-                    <ul>
-                        <li>Topic</li>
-                        <li>Date and time</li>
-                        <li>Location</li>
-                        <li>Instructions</li>
-                        <li><a href="professional_latex.md">Instructions</a></li>
-                      </ul>
+                    <h3 class="font-alt font-w-600 letter-spacing-2 text-uppercase title-xs-small title-extra-large-2">WIT Professional Meetings</h3>
+                    <p class="font-alt mb-0 mt-3 text-xs-large text-uppercase title-medium"></p>
+                    <span class="bg-base-color d-inline-block mt-4 sep-line-thick-long"></span>
                 </div>
                 <!-- //.col-lg-9 -->
             </div>
             <!-- //.row -->
 
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="carousel-custom" data-pagedots="true" data-draggable="false" data-autoplay="5000">
+                        <div class="carousel-cell w-100">
+                            <img src="meeting_latex\snapshots\leaf_welcome.png" alt="" class="img-fluid box-shadow-shallow rounded"/>
+                        </div>
+                        <!-- //.carousel-cell -->
 
+                        <div class="carousel-cell w-100">
+                            <img src="meeting_latex\snapshots\leaf_template.png" alt="" class="img-fluid box-shadow-shallow rounded"/>
+                        </div>
+                        <!-- //.carousel-cell -->
+
+                        <div class="carousel-cell w-100">
+                            <img src="meeting_latex\snapshots\leaf_custermize.png" alt="" class="img-fluid box-shadow-shallow rounded"/>
+                        </div>
+                        <!-- //.carousel-cell -->
+                    </div>
+                    <!-- //.carousel-custom -->
+                </div>
+                <!-- //.col-lg-6 -->
+
+                <div class="col-lg-6">
+                    <div class="pl-lg-4 pt-5 pt-lg-0">
+                        <h5> Building a Resume/CV with Overleaf/LaTeX</h5>
+                        <ol>
+                            <li>Date: Nov 14 Thursday</li>
+                            <li>Time: 6-7pm</li>
+                            <li>Location: King 260</li>
+                            <li>Workshop instruction: <a href="meeting_latex\WITclublatexworshop.pdf" download>Download</a></li>
+                          </ol>
+                    </div>
+                    <!-- //.pl-lg-4 -->
+                </div>
+                <!-- //.col-lg-6 -->
+            </div>
             <!-- //.row -->
         </div>
         <!-- //.container -->
