--- a/WITCalendar.html
+++ b/WITCalendar.html
@@ -62,6 +62,9 @@
                                     <a class="nav-link" href="WITCalendar.html">Calendar</a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link" href="WITEvents.html">Events</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link" href="WITPastEvent.html">Past Events</a>
                                 </li>
                                 <li class="nav-item">
