--- a/WITPastEvent.html
+++ b/WITPastEvent.html
@@ -122,6 +122,21 @@
         </div>
         <!-- //.h-100 -->
     </section>
+      <!-- //Section Fall 2024- Home End -->
+	<section id="gallery" class="bg-white">
+        <div class="container">
+            <div class="row justify-content-center pb-5">
+                <div class="col-lg-9 pb-lg-4 text-center">
+                    <h3 class="font-alt font-w-600 letter-spacing-2 text-uppercase title-xs-small title-extra-large-2">WIT Fall 2024</h3>
+                    <span class="bg-base-color d-inline-block mt-4 sep-line-thick-long"></span>
+                </div>
+                <!-- //.col-lg-9 -->
+            </div>
+            <!-- //.row -->
+            <!-- //.row -->
+        </div>
+        <!-- //.container -->
+    </section>
     <!-- //Section - Home End -->
 	<section id="gallery" class="bg-white">
         <div class="container">
