Edit past events

--- a/WITPastEvent.html
+++ b/WITPastEvent.html
@@ -135,6 +135,42 @@
             <!-- //.row -->
             <!-- //.row -->
         </div>
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="carousel-custom" data-pagedots="true" data-draggable="false" data-autoplay="5000">
+                    <div class="carousel-cell w-100">
+                        <img src="meeting_latex\snapshots\leaf_welcome.png" alt="" class="img-fluid box-shadow-shallow rounded"/>
+                    </div>
+                    <!-- //.carousel-cell -->
+
+                    <div class="carousel-cell w-100">
+                        <img src="meeting_latex\snapshots\leaf_template.png" alt="" class="img-fluid box-shadow-shallow rounded"/>
+                    </div>
+                    <!-- //.carousel-cell -->
+
+                    <div class="carousel-cell w-100">
+                        <img src="meeting_latex\snapshots\leaf_custermize.png" alt="" class="img-fluid box-shadow-shallow rounded"/>
+                    </div>
+                    <!-- //.carousel-cell -->
+                </div>
+                <!-- //.carousel-custom -->
+            </div>
+            <!-- //.col-lg-6 -->
+
+            <div class="col-lg-6">
+                <div class="pl-lg-4 pt-5 pt-lg-0">
+                    <h5> Building a Resume/CV with Overleaf/LaTeX</h5>
+                    <ol>
+                        <li>Date: Nov 14 Thursday</li>
+                        <li>Time: 6-7pm</li>
+                        <li>Location: King 260</li>
+                        <li>Workshop instruction: <a href="meeting_latex\WITclublatexworshop.pdf" download>Download</a></li>
+                      </ol>
+                </div>
+                <!-- //.pl-lg-4 -->
+            </div>
+            <!-- //.col-lg-6 -->
+        </div>
         <!-- //.container -->
     </section>
     <!-- //Section - Home End -->
