--- a/WITEvents.html
+++ b/WITEvents.html
@@ -103,18 +103,10 @@
                 <div class="col-lg-6">
                     <div class="carousel-custom" data-pagedots="true" data-draggable="false" data-autoplay="5000">
                         <div class="carousel-cell w-100">
-                            <img src="meeting_latex\snapshots\leaf_welcome.png" alt="" class="img-fluid box-shadow-shallow rounded"/>
+                            <img src="events\python_notebooks\python_notebooks.png" alt="" class="img-fluid box-shadow-shallow rounded"/>
                         </div>
                         <!-- //.carousel-cell -->
 
-                        <div class="carousel-cell w-100">
-                            <img src="meeting_latex\snapshots\leaf_template.png" alt="" class="img-fluid box-shadow-shallow rounded"/>
-                        </div>
-                        <!-- //.carousel-cell -->
-
-                        <div class="carousel-cell w-100">
-                            <img src="meeting_latex\snapshots\leaf_custermize.png" alt="" class="img-fluid box-shadow-shallow rounded"/>
-                        </div>
                         <!-- //.carousel-cell -->
                     </div>
                     <!-- //.carousel-custom -->
@@ -123,12 +115,27 @@
 
                 <div class="col-lg-6">
                     <div class="pl-lg-4 pt-5 pt-lg-0">
-                        <h5> Building a Resume/CV with Overleaf/LaTeX</h5>
+                        <h5> JMU WIT workshop: Python Notebooks - Jupyter and Marimo</h5>
                         <ol>
-                            <li>Date: Nov 14 Thursday</li>
-                            <li>Time: 6-7pm</li>
-                            <li>Location: King 260</li>
-                            <li>Workshop instruction: <a href="meeting_latex\WITclublatexworshop.pdf" download>Download</a></li>
+                            <li>Date: April 07 Monday</li>
+                            <li>Time: 5-6pm</li>
+                            <li>Location: King 243</li>
+                          </ol>
+                    </div>
+                    <!-- //.pl-lg-4 -->
+                </div>
+                <!-- //.col-lg-6 -->
+            </div>
+            <div class="row">
+                <!-- //.col-lg-6 -->
+
+                <div class="col-lg-6">
+                    <div class="pl-lg-4 pt-5 pt-lg-0">
+                        <h5> JMU WIT workshop: Python Notebooks - Jupyter and Marimo</h5>
+                        <ol>
+                            <li>Date: April 07 Monday</li>
+                            <li>Time: 5-6pm</li>
+                            <li>Location: King 243</li>
                           </ol>
                     </div>
                     <!-- //.pl-lg-4 -->
