--- a/WITEvents.html
+++ b/WITEvents.html
@@ -100,17 +100,6 @@
             <!-- //.row -->
 
             <div class="row">
-                <div class="col-lg-6">
-                    <div class="carousel-custom" data-pagedots="true" data-draggable="false" data-autoplay="5000">
-                        <div class="carousel-cell w-100">
-                            <img src="events\python_notebooks\python_notebooks.png" alt="" class="img-fluid box-shadow-shallow rounded"/>
-                        </div>
-                        <!-- //.carousel-cell -->
-
-                        <!-- //.carousel-cell -->
-                    </div>
-                    <!-- //.carousel-custom -->
-                </div>
                 <!-- //.col-lg-6 -->
 
                 <div class="col-lg-6">
@@ -120,22 +109,8 @@
                             <li>Date: April 07 Monday</li>
                             <li>Time: 5-6pm</li>
                             <li>Location: King 243</li>
-                          </ol>
-                    </div>
-                    <!-- //.pl-lg-4 -->
-                </div>
-                <!-- //.col-lg-6 -->
-            </div>
-            <div class="row">
-                <!-- //.col-lg-6 -->
+                            <li>Instructions:</li>
 
-                <div class="col-lg-6">
-                    <div class="pl-lg-4 pt-5 pt-lg-0">
-                        <h5> JMU WIT workshop: Python Notebooks - Jupyter and Marimo</h5>
-                        <ol>
-                            <li>Date: April 07 Monday</li>
-                            <li>Time: 5-6pm</li>
-                            <li>Location: King 243</li>
                           </ol>
                     </div>
                     <!-- //.pl-lg-4 -->
