--- a/WITEvents.html
+++ b/WITEvents.html
@@ -101,6 +101,17 @@
 
             <div class="row">
                 <!-- //.col-lg-6 -->
+                <div class="col-lg-6">
+                    <div class="carousel-custom" data-pagedots="true" data-draggable="false" data-autoplay="5000">
+                        <div class="carousel-cell w-100">
+                            <img src="events\python_notebooks\python_notebooks.png" alt="" class="img-fluid box-shadow-shallow rounded"/>
+                        </div>
+                        <!-- //.carousel-cell -->
+
+                        <!-- //.carousel-cell -->
+                    </div>
+                    <!-- //.carousel-custom -->
+                </div>
 
                 <div class="col-lg-6">
                     <div class="pl-lg-4 pt-5 pt-lg-0">
