Add activity ro events

--- a/WITEvents.html
+++ b/WITEvents.html
@@ -116,13 +116,32 @@
                 <div class="col-lg-6">
                     <div class="pl-lg-4 pt-5 pt-lg-0">
                         <h5> JMU WIT workshop: Python Notebooks - Jupyter and Marimo</h5>
-                        <ol>
+                        <ul>
                             <li>Date: April 07 Monday</li>
                             <li>Time: 5-6pm</li>
                             <li>Location: King 243</li>
                             <li>Instructions:</li>
+                            <ol>
+                                <li>Preparation</li>
+                                <ul>
+                                    <li>A computer with Python interpreter and VS Code installed.</li>
+                                    <li>In VS Code, install the Jupyter extension from the Extensions Marketplace.</li>
+                                  </ul>
+                                <li>Jupyter Introduction</li>
+                                <ul>
+                                    <li>Download the first notebook.</li>
+                                    <li>Read through the provided notes and run the code cells.</li>
+                                    <li>Complete the exercises at the end of the notebook.</li>
+                                  </ul>
+                                <li>Jupyter Activity: Work with a real-world lightning dataset.</li>
+                                <ul>
+                                    <li>Download the starter notebook.</li>
+                                    <li>Use Python to load, explore, and process the dataset in a Jupyter Notebook.</li>
+                                </ul>
+                                <li>Marimo Introduction</li>
 
-                          </ol>
+                              </ol>
+                          </ul>
                     </div>
                     <!-- //.pl-lg-4 -->
                 </div>
