Edit text format in event

--- a/WITEvents.html
+++ b/WITEvents.html
@@ -115,12 +115,12 @@
 
                 <div class="col-lg-6">
                     <div class="pl-lg-4 pt-5 pt-lg-0">
-                        <h5> JMU WIT workshop: Python Notebooks - Jupyter and Marimo</h5>
+                        <h5> <strong>JMU WIT workshop:</strong> Python Notebooks - Jupyter and Marimo</h5>
                         <ul>
-                            <li>Date: April 07 Monday</li>
-                            <li>Time: 5-6pm</li>
-                            <li>Location: King 243</li>
-                            <li>Instructions:</li>
+                            <li><strong>Date:</strong> April 07 Monday</li>
+                            <li><strong>Time:</strong> 5-6pm</li>
+                            <li><strong>Location:</strong> King 243</li>
+                            <li><strong>Instructions:</strong></li>
                             <ol>
                                 <li>Preparation</li>
                                 <ul>
