--- a/WITEvents.html
+++ b/WITEvents.html
@@ -115,7 +115,7 @@
 
                 <div class="col-lg-6">
                     <div class="pl-lg-4 pt-5 pt-lg-0">
-                        <h5> <strong>JMU WIT workshop:</strong> Python Notebooks - Jupyter and Marimo</h5>
+                        <h5> <strong>JMU WIT workshop:</strong> Python Notebooks Introduction - Jupyter and Marimo</h5>
                         <ul>
                             <li><strong>Date:</strong> April 07 Monday</li>
                             <li><strong>Time:</strong> 5-6pm</li>
@@ -139,7 +139,6 @@
                                     <li>Use Python to load, explore, and process the dataset in a Jupyter Notebook.</li>
                                 </ul>
                                 <li>Marimo Introduction</li>
-
                               </ol>
                           </ul>
                     </div>
