Add code for an event

--- a/WITEvents.html
+++ b/WITEvents.html
@@ -129,7 +129,7 @@
                                   </ul>
                                 <li>Jupyter Introduction</li>
                                 <ul>
-                                    <li>Download the first notebook.</li>
+                                    <li>Download the first notebook file: <a href="events\python_notebooks\intro-jupyter.ipynb" download></a></li>
                                     <li>Read through the provided notes and run the code cells.</li>
                                     <li>Complete the exercises at the end of the notebook.</li>
                                   </ul>
