Finalize the python notebook event

--- a/WITEvents.html
+++ b/WITEvents.html
@@ -129,16 +129,29 @@
                                   </ul>
                                 <li>Jupyter Introduction</li>
                                 <ul>
-                                    <li>Download the first notebook file: <a href="events\python_notebooks\intro-jupyter.ipynb" download></a></li>
+                                    <li>Download the first notebook file: <a href="events\python_notebooks\intro-jupyter.ipynb"> intro-jupyter.ipynb
+                                    </a></li>
                                     <li>Read through the provided notes and run the code cells.</li>
                                     <li>Complete the exercises at the end of the notebook.</li>
                                   </ul>
                                 <li>Jupyter Activity: Work with a real-world lightning dataset.</li>
                                 <ul>
-                                    <li>Download the starter notebook.</li>
+                                    <li>Download the starter notebook file and dataset: <a href="events\python_notebooks\jupyter_exercise.ipynb"> jupyter_exercise.ipynb
+                                    </a>, <a href="events\python_notebooks\Salt_Lake_2020.csv"> Salt_Lake_2020.csv
+                                    </a>.</li>
                                     <li>Use Python to load, explore, and process the dataset in a Jupyter Notebook.</li>
                                 </ul>
+
                                 <li>Marimo Introduction</li>
+                                <ul>
+                                <li><strong>Quick start:</strong> <a href="https://marimo.io/"> Marimo online playground</a></li>
+                                <li>Get started Marimo for your devices</li>
+                                <ul>
+                                    <li><a href="https://docs.marimo.io/getting_started/installation/"> Installation</a></li>
+                                    <li><a href="https://docs.marimo.io/getting_started/quickstart/"> Quickstart</a></li>
+                                    <li>Starter code: <a href="events/python_notebooks/my_first_marimo.py">my_first_marimo.py</a></li>
+                                </ul>
+                            </ul>
                               </ol>
                           </ul>
                     </div>
